Adds an additional endpoint that accepts the metadata as a BASE64-encoded string instead of forcing XML data into the JSON structure
