# src/main/resources/openapi.yaml
@@ -25,18 +25,54 @@ paths:
               $ref: '#/components/schemas/ByggRArchiveRequest'
         required: true
       responses:
-        "400":
-          description: Bad request
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
         "200":
           description: Successful operation
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/ArchiveResponse'
+        "400":
+          description: Bad request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+  /archive/byggr2:
+    post:
+      tags:
+      - Archive resources
+      summary: Submit a ByggR archive request with BASE64-encoded metadata
+      operationId: byggR2
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ByggRArchiveRequest2'
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ArchiveResponse'
+        "400":
+          description: Bad request
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Problem'
+  /api-docs:
+    get:
+      tags:
+      - API
+      summary: OpenAPI-definition
+      operationId: api-docs
+      responses:
+        "200":
+          description: OK
+      x-auth-type: None
+      x-throttling-tier: Unlimited
 components:
   schemas:
     Attachment:
@@ -68,33 +104,6 @@ components:
           type: string
           description: Metadata XML
       description: Request för att arkivera bygglovshandlingar
-    Problem:
-      type: object
-      properties:
-        instance:
-          type: string
-          format: uri
-        type:
-          type: string
-          format: uri
-        parameters:
-          type: object
-          additionalProperties:
-            type: object
-        status:
-          $ref: '#/components/schemas/StatusType'
-        detail:
-          type: string
-        title:
-          type: string
-    StatusType:
-      type: object
-      properties:
-        reasonPhrase:
-          type: string
-        statusCode:
-          type: integer
-          format: int32
     ArchiveResponse:
       type: object
       properties:
@@ -121,4 +130,44 @@ components:
           nullable: true
       description: Error details
       nullable: true
+    Problem:
+      type: object
+      properties:
+        instance:
+          type: string
+          format: uri
+        type:
+          type: string
+          format: uri
+        parameters:
+          type: object
+          additionalProperties:
+            type: object
+        status:
+          $ref: '#/components/schemas/StatusType'
+        title:
+          type: string
+        detail:
+          type: string
+    StatusType:
+      type: object
+      properties:
+        statusCode:
+          type: integer
+          format: int32
+        reasonPhrase:
+          type: string
+    ByggRArchiveRequest2:
+      required:
+      - attachment
+      - metadata
+      type: object
+      properties:
+        attachment:
+          $ref: '#/components/schemas/Attachment'
+        metadata:
+          type: string
+          description: Metadata XML
+      description: "Request för att arkivera bygglovshandlingar, med BASE64-encode:ad\
+        \ metadata"
   securitySchemes: {}
